# Timefork

./: .gitignore  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
bench/: benchmarks.py
db/: 002_completed_keys.sql  003_counters.sql  004_leases.sql  005_fencing.sql  006_lineage.sql  007_paused.sql  schema.sql
examples/: 01_hello_event_log.py  02_mock_llm.py  03_record_and_replay.py  04_divergence.py  05_side_effect.py  06_workers_claim.py  07_lease_heartbeat.py  08_sweeper.py  09_fencing.py  10_worker.py  11_fork.py  12_diff.py  13_showcase.py
harness/: __init__.py  agent.py  chaos.py  fleet.py  refund.py  refund_chaos.py  worker.py
tests/: test_approval.py  test_cli.py  test_context.py  test_crash_resume.py  test_dashboard.py  test_diff.py  test_events.py  test_exactly_once.py  test_fencing.py  test_fleet.py  test_fork.py  test_lease.py  test_mock_llm.py  test_queue.py  test_side_effect.py  test_sweeper.py  test_worker.py
timefork/: __init__.py  cli.py  context.py  crash.py  dashboard.py  diff.py  events.py  fork.py  llm.py  mock_llm.py  queue.py  worker.py
