[project]
name = "timefork"
version = "0.1.0"
description = "Durable execution runtime for AI agents, with time-travel debugging"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["timefork*"]

[tool.pytest.ini_options]
pythonpath = ["."]
