[project]
name = "timefork"
version = "0.1.0"
description = "Durable execution runtime for AI agents, with time-travel debugging"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
]
showcase = [
    "anthropic>=0.40",
]

[project.scripts]
timefork = "timefork.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["timefork*"]

[tool.pytest.ini_options]
pythonpath = ["."]
